@@ -1,5 +1,10 @@
 2010-07-10  David Reveman  <davidr@novell.com>
 
+	* frameworkelement.cpp:
+	* uielement.cpp:
+	* effect.cpp:
+	* effect.h: Replace Effect::TransformBounds with Effect::Padding.
+
 	* uielement.cpp (ComputeSurfaceBounds):
 	* frameworkelement.cpp (ComputeSurfaceBounds): Ignore ancestor
 	element effects when computing surface bounds.
